<resources>
    <string name="app_name">Trabalho Android</string>
    <string name="password">Password:</string>
    <string name="register">Register</string>
    <string name="name">Name:</string>
    <string name="birthdate">Date of Birth:</string>
    <string name="sex">Sex:</string>
    <string name="emasil">Email:</string>
    <string name="confirmPassword">Confirm Password:</string>
    <string name="username">Username:</string>
    <string name="wrongPasswords">Passwords don\'t match</string>
    <string name="emptyField">This field cannot be empty</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="exercise_title">Exercise</string>
    <string name="lets_exercise">Exercise Time</string>
    <string name="alarm_open">Open</string>
    <string name="time">Time:</string>
    <string name="alarm">Exercises Alarm</string>
    <string name="language">Language</string>
    <string name="portuguese">Português</string>
    <string name="english">English</string>
    <string name="exercise">Exercise</string>
    <string name="new_exercise">New Exercise</string>
    <string name="cancel">Cancel</string>
    <string name="recording">Recording...</string>
    <string name="recorded">Successfully recorded</string>
    <string name="training">Train</string>
    <string name="profile">Profile</string>
    <string name="changeProfilePic">CHANGE PROFILE PICTURE</string>
    <string name="editProfile">EDIT PROFILE</string>
    <string name="saveChanges">SAVE CHANGES</string>
    <string name="captureMovement">CAPTURE MOVEMENT</string>
    <string name="sair">Logout</string>
    <string name="exercises">Exercises</string>
    <string name="settings">Settings</string>
    <string name="welcome">Welcome,</string>
    <string name="wel_suc">Registration successfully. Welcome!</string>
    <string name="error">There was a connection error. Please, try again.</string>
    <string name="check">Please, check the fields.</string>
    <string name="denied">\"PERMISSION_DENIED\"</string>
    <string name="valid_user">Please, insert a valid username.</string>
    <string name="valid_pass">Please, insert a valid password.</string>
    <string name="try_again">Please, insert a valid password.</string>
    <string name="wrong">Wrong username and/or password.</string>
    <string name="wrong_pass">Wrong password. Please, try again.</string>
    <string name="max">Maximum: 12 characters</string>
</resources>
