<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">


    <TextView
        style="@style/Base.TextAppearance.AppCompat.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingTop="20dp"
        android:text="@string/profile"
        android:textColor="@color/lightBlue"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imgProfilePic"
        android:layout_width="75dp"
        android:layout_height="94dp"
        android:src="@drawable/default_profile_pic" />

    <Button
        android:id="@+id/btnChangeProfilePic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/changeProfilePic" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingRight="20dp"
        android:paddingBottom="5dp">

        <TextView
            style="@style/textView"
            android:text="@string/name" />


        <TextView
            style="@style/textView"
            android:id="@+id/tvName"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="5dp">

        <TextView
            style="@style/textView"
            android:text="@string/sex" />

        <TextView
            style="@style/textView"
            android:id="@+id/tvSex"/>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingRight="20dp"
        android:paddingBottom="5dp">

        <TextView
            style="@style/textView"
            android:text="@string/birthdate" />


        <TextView
            style="@style/textView"
            android:id="@+id/tvBirthDateDay"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="/"
            android:textSize="20dp" />

        <TextView
            style="@style/textView"
            android:id="@+id/tvBirthDateMonth"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="/"
            android:textSize="20dp" />

        <TextView
            style="@style/textView"
            android:id="@+id/tvBirthDateYear"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingRight="20dp"
        android:paddingBottom="5dp">

        <TextView
            style="@style/textView"
            android:text="@string/email" />


        <TextView
            style="@style/textView"
            android:id="@+id/tvEmail"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingRight="20dp"
        android:paddingBottom="5dp">

        <TextView
            style="@style/textView"
            android:text="@string/username" />


        <TextView
            style="@style/textView"
            android:id="@+id/tvUsername"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingRight="20dp"
        android:paddingBottom="40dp">

        <TextView
            style="@style/textView"
            android:text="@string/password" />


        <TextView
            style="@style/textView"
            android:id="@+id/tvPassword"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnEditProfile"
        style="@style/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editProfile" />

</LinearLayout>